Streamline the Janex file format specification
Assisted-by: codex:gpt-5.6-sol