@@ -1,41 +1,11 @@
 # Janex File Format
 
-The Janex format is a modern executable packaging format for Java programs.
+Janex is a sectioned container format for packaging Java applications. It supports isolated resource
+groups, the Java module system, compressed and shared content, remote dependencies, embedded launch
+configuration, conditional runtime selection, and optional data before or after the Janex container.
 
-The Janex format is designed as a better alternative to Shadow JAR (Fat JAR) and launch4j,
-aiming to be the optimal solution for single-file packaging and distribution of Java programs.
-Its key features include:
-
-- **Module system support**: Unlike Shadow JAR (Fat JAR), Janex properly supports the Java module system.
-  Resources from different JARs are isolated under different resource groups instead of being mixed together.
-- **Zstandard compression**: Janex uses [Zstandard](https://github.com/facebook/zstd) for compression,
-  which provides faster decompression and smaller file sizes compared to the deflate compression used by JAR.
-  Additionally, Janex shares strings from the constant pool of Java class files across resource groups,
-  further reducing the overall file size.
-- **Remote dependencies**: Janex files can declare dependencies on packages from external sources (such as Maven
-  repositories) using Package URLs (PURLs). These dependencies are not bundled in the Janex file but are resolved
-  and downloaded on demand before the program starts.
-- **Automatic Java runtime selection**: Users can specify conditions (such as a minimum Java version, operating system,
-  or CPU architecture), and the Janex Launcher will find a suitable installed Java runtime to run the program.
-- **Embedded JVM options**: Janex files can contain JVM options (such as `--add-exports`, `--enable-native-access`,
-  `-D`, etc.) that are passed to the JVM at runtime.
-- **Conditional configuration**: Janex supports dynamic selection of Java runtimes, classpath entries,
-  module path entries, and JVM arguments based on runtime environment conditions using
-  [Common Expression Language (CEL)](https://cel.dev/overview/cel-overview) expressions.
-- **Prepended data support**: The Janex format allows arbitrary custom data (such as PE/ELF executables or shell
-  scripts) to be prepended to the file, enabling shebang support for direct execution on Unix-like systems and
-  self-contained distribution with an embedded launcher.
-
-When launching a Janex program, the **Janex Launcher** reads the launcher metadata to find a suitable Java runtime,
-evaluates the appropriate conditions to determine the JVM arguments, and starts a Java process accordingly.
-
-In the Java process, the **Janex Boot** (provided as a JAR on the class path) is loaded, which supplies a custom
-ClassLoader that reads classes and resources directly from the Janex file.
-
-Before this, we already had a prototype, whose documentation includes design concepts and other content about this file.
-For more information, please refer to [janex-dev/japp](https://github.com/janex-dev/japp).
-
-This document is an improvement based on the prototype, and we hope to make it safer, more stable, and easier to extend.
+The Janex Launcher selects a Java runtime and starts the application. Janex Boot provides the class
+loader that reads classes and resources from the container.
 
 ## Data Types
 
@@ -52,41 +22,28 @@ and uses `f32`/`f64` to represent 32/64-bit floating-point numbers.
 
 ### Complex Data Types
 
-This document uses pseudocode similar to Rust structs to represent complex data types. For example:
-
-```rust
-struct MyStruct {
-    length: u32,
-    data: [u8; length],
-}
-```
-
-Here, `length` is a 32-bit unsigned integer, and `data` is a byte array of length `length`.
+Complex layouts use Rust-like pseudocode. `[T; count]` denotes `count` consecutive values of type `T`.
 
 ### Variable-length integers
 
-Janex uses unsigned Little Endian Base 128 (ULEB128) to efficiently encode unsigned integers in some structures.
-This document calls the resulting 64-bit value type `vuint`:
+Janex calls a 64-bit unsigned integer encoded as ULEB128 a `vuint`:
 
 ```rust
 type vuint = u64;
 ```
 
-A `vuint` uses the standard ULEB128 byte layout. It is stored as one to ten bytes, with the least-significant
-seven-bit group first. The lower seven bits of each byte carry integer data, and the most significant bit (MSB)
-serves as the continuation flag:
+A `vuint` occupies one to ten bytes. Each byte carries seven value bits and uses its most significant
+bit as the continuation flag:
 
 - If the MSB is `0`, the current byte is the last byte of the integer.
 - If the MSB is `1`, more bytes follow; the next byte continues the encoding.
 
-Because `vuint` has a width of 64 bits, its encoding must not exceed ten bytes, and the tenth byte can contain
-at most one non-zero payload bit. Janex writers emit the shortest ULEB128 representation. Readers also accept
-zero-padded ULEB128 representations within the ten-byte width limit.
+The least-significant group comes first. The tenth byte may contain at most one nonzero value bit.
+Writers use the shortest encoding; readers also accept zero-padded encodings within this limit.
 
 ### Dynamic Array
 
-Janex uses the following structure to store dynamically sized arrays. The `elements_count` field specifies the
-number of elements, followed by the elements themselves serialized in sequence:
+Dynamic arrays store their element count followed by the encoded elements:
 
 ```rust
 struct Vec<T> {
@@ -117,7 +74,7 @@ struct Sized<T> {
 
 ### String
 
-String is a special `Vec<u8>` where the bytes are UTF-8 encoded string data:
+`String` is a UTF-8 byte vector:
 
 ```rust
 type String = Vec<u8>;
@@ -125,7 +82,7 @@ type String = Vec<u8>;
 
 ### Tagged Payload
 
-A variable-length structure with a integer tag:
+`TaggedPayload<T>` prefixes a payload with a tag and its byte length:
 
 ```rust
 struct TaggedPayload<T> {
@@ -140,23 +97,7 @@ struct TaggedPayload<T> {
 }
 ```
 
-This structure makes it easy for parsers to skip unrecognized fields. 
-
-In this document, we use `#[repr(TaggedPayload<T>)]` to annotate a struct to use such a layout.
-
-Since the binary structure of `String` is also `payload_bytes` + `payload`, 
-for `TaggedPayload` with a `String` payload,
-the `String` type can be used directly to replace these two fields. 
-
-For example:
-
-```rust
-#[repr(TaggedPayload<u32>)]
-struct MyStruct {
-    tag: u32,
-    value: String,
-}
-```
+This document uses `#[repr(TaggedPayload<T>)]` to denote this layout.
 
 ### CBOR
 
@@ -203,37 +144,20 @@ Currently supported checksum algorithms:
 ```rust
 #[repr(u16)]
 enum ChecksumAlgorithm {
-    /// No checksum.
-    /// 
-    /// The `checksum` field is empty.
-    NONE = 0,
+    NONE = 0,     // 0 bytes
     
-    /// XXH64 checksum.
-    /// 
-    /// The elements count of the `checksum` field is `8`.
-    XXH64 = 0x0101,
+    XXH64 = 0x0101,  // 8 bytes
     
-    /// SHA-256 checksum.
-    /// 
-    /// The elements count of the `checksum` field is `32`.
-    SHA256 = 0x8101,
+    SHA256 = 0x8101, // 32 bytes
 
-    /// SHA-512 checksum.
-    ///
-    /// The elements count of the `checksum` field is `64`.
-    SHA512 = 0x8102,
+    SHA512 = 0x8102, // 64 bytes
     
-    /// SM3 checksum.
-    ///
-    /// The elements count of the `checksum` field is `32`.
-    SM3 = 0x8301,
+    SM3 = 0x8301,    // 32 bytes
 }
 ```
 
-For a known algorithm, the length of `checksum` must match the length specified by
-`ChecksumAlgorithm`. The length prefix permits readers to skip the value of an unknown algorithm and
-continue parsing subsequent metadata. If a checksum is required for validation, a reader must reject
-an unsupported algorithm because it cannot perform that validation.
+The checksum length must match the algorithm. Unknown algorithms can be skipped but cannot satisfy a
+required validation.
 
 CBOR metadata represents the same value as a two-element array:
 
@@ -249,8 +173,7 @@ the same algorithm-specific length requirements as the binary `Checksum` structu
 
 ## Janex File Structure
 
-The Janex file is the binary format produced by the Janex build tool for packaging and distributing
-Java programs as self-contained executables. Its overall layout is as follows:
+The Janex container has the following layout:
 
 ```rust
 struct JanexFile {
@@ -270,10 +193,8 @@ The complete physical file may contain data outside `JanexFile`:
 [external header] [JanexFile] [external tail]
 ```
 
-External regions may be described by `FileMetadataObject.external_header` and
-`FileMetadataObject.external_tail`. Their physical presence is independent of whether these
-descriptions are present. External regions are not Janex sections and do not appear in the section
-table.
+`FileMetadataObject` may constrain the external regions. They are not Janex sections and do not appear
+in the section table.
 
 ### `FileMetadata` Section
 
@@ -282,25 +203,14 @@ struct FileMetadataSection {
     /// The magic number identifying the `FileMetadata` section.
     magic_number: u64, // 0x4154_4144_4154_454d ("METADATA")
 
-    /// The major version number of the Janex file format.
-    ///
-    /// Readers must reject files with an unsupported major version.
-    /// 
-    /// Currently, Janex is in the early development stage, and the major version number is 0.
+    /// The format major version, currently `0`. Unsupported values are invalid.
     major_version: u32,
 
-    /// The minor version number of the Janex file format.
+    /// The format minor version, currently `1`.
     ///
-    /// For a nonzero major version, readers should accept files with a higher minor version within
-    /// the same major version, ignoring unknown fields or entries where their enclosing structures
-    /// permit this.
-    ///
-    /// While `major_version` is `0`, readers must reject files whose minor version they do not
-    /// explicitly support. During active format design, edits to this specification, including
-    /// changes to the described binary layout, do not automatically change the minor version; a new
-    /// value is assigned only when establishing a distinct supported format revision.
-    ///
-    /// The current minor version is `1`.
+    /// With major version `0`, readers accept only explicitly supported minor versions. For later
+    /// major versions, readers should accept higher minor versions where unknown fields are skippable.
+    /// Specification edits do not automatically change this value.
     minor_version: u32,
 
     /// The deterministic CBOR file-metadata map.
@@ -309,22 +219,13 @@ struct FileMetadataSection {
     /// The verification information.
     verification_info: VerificationInfo,
     
-    /// The end mark of the file.
-    ///
     /// Always `0x444e_4558_454e_414a` ("JANEXEND").
-    ///
-    /// A reader first determines the end offset of `JanexFile`, reads this footer, uses
-    /// `metadata_length` to locate `FileMetadata`, and uses `file_length` to locate the start of
-    /// `JanexFile`.
     end_mark: u64,  // 0x444e_4558_454e_414a ("JANEXEND")
     
     /// The length in bytes of the metadata section.
     metadata_length: u64,
 
-    /// The total length in bytes of the `JanexFile` structure.
-    ///
-    /// The reader subtracts an externally supplied tail length from the physical file size to obtain
-    /// the end offset of `JanexFile`, then uses this value to locate its start.
+    /// The total byte length of `JanexFile`.
     file_length: u64,
 }
 ```
@@ -348,36 +249,25 @@ ExtensionMap = { * NonemptyText => any }
 NonemptyText = tstr .ne ""
 ```
 
-Keys `0` through `3` are required. `flags` must currently be `0`. `section_table` may be empty because
-it does not include the final `FileMetadata` section. `extensions`, when present, is a text-keyed map
-whose values follow their key-specific schemas; an empty map is valid, although writers should omit
-it.
+Keys `0` through `3` are required. `flags` must be `0`. `section_table` excludes the final
+`FileMetadata` section and may be empty.
 
 #### Metadata Evolution and Extensions
 
-Maps that define Janex core structures use unsigned integer keys. Maps intended for attributes or
-third-party extensions use non-empty text keys. The `janex.` key prefix is reserved for this
-specification; third-party keys should use a reverse-domain prefix such as `org.example.`. The
-definition of a key determines the exact schema and semantics of its value.
+Core maps use unsigned integer keys; attributes and extension maps use non-empty text keys. `janex.`
+is reserved. Third-party keys should use a reverse-domain prefix such as `org.example.`.
 
-An unknown key must not change the interpretation of known keys and may be ignored. A new field that
-is required to interpret existing data must instead be guarded by an explicit required feature, a new
-section type, or a new supported format revision. A tool that rewrites a file while claiming to
-preserve its semantics must preserve unknown optional map entries at the data-model level, although it
-may re-encode them in the required deterministic form.
+Unknown optional keys may be ignored. Semantic rewrites must preserve them. A field required to
+interpret existing data must be declared through `required_features`, a new section type, or a new
+format revision.
 
-Empty maps and arrays are valid wherever their schema permits an empty collection. Writers should
-omit an optional empty map, but readers must accept it when the containing key or section is present.
-An omitted key and a `null` value are distinct: omission means that no value was supplied, while
-`null` has meaning only where the field's schema explicitly defines it.
+Empty collections are valid where allowed by the schema. Optional empty maps should be omitted. `null`
+is valid only where the schema defines it and is distinct from an omitted key.
 
-`required_features` declares features that a reader must understand to interpret the file correctly.
-Numeric feature IDs are assigned by this specification. A text feature ID must be non-empty and
-follow the text-key naming rules above. Feature IDs must be unique. The array must be sorted by the
-bytewise lexicographic order of each feature ID's deterministic encoding, matching the map-key ordering
-in RFC 8949 Section 4.2.1. A reader must reject a file containing an unsupported required feature. No
-core required feature IDs are currently defined. A writer that uses no required features should omit
-key `5`; readers must also accept an empty array, which has the same meaning as omission.
+`required_features` contains unique feature IDs sorted bytewise by their deterministic CBOR encoding.
+Numeric IDs are assigned by this specification; text IDs follow the naming rules above. Readers must
+reject unsupported required features. No core feature IDs are currently defined. Omission and an empty
+array both mean that no feature is required.
 
 #### `SectionInfoObject` Map
 
@@ -396,28 +286,19 @@ SectionInfoObject = {
 SectionMetadataObject = { * uint => any }
 ```
 
-Generally, `section_type` is the same as the `magic_number` of the section content when that section
-has a magic number. A section is identified within one `JanexFile` by `(section_type, id)`. Two entries
-with the same pair are invalid. IDs may be sparse and carry no ordering, priority, or semantic
-meaning. They are file-local identities rather than stable cross-file identities. A tool may remap an
-ID only when it also rewrites every affected reference. A section type that permits at most one
-instance in a file must use ID `0` for that instance.
+For sections with a magic number, `section_type` normally equals that number. `(section_type, id)` must
+be unique within the file. IDs are file-local, may be sparse, and carry no ordering or semantic
+meaning. Singleton section types use ID `0`.
 
-`length` is the exact encoded byte length of the corresponding section. `checksum` covers those exact
-section bytes. Unless its algorithm is `NONE`, readers must verify the checksum before trusting the
-section contents.
+`length` is the exact encoded section length. `checksum` covers those bytes and must be verified unless
+its algorithm is `NONE`.
 
-The optional `metadata` map is interpreted according to `section_type`. An empty map is valid; writers
-should omit key `4` when it is empty. Unknown keys in a known section-type metadata map are optional
-and may be ignored unless their semantics are guarded by a feature listed in
-`FileMetadataObject.required_features`.
+The optional `metadata` map is defined by `section_type` and should be omitted when empty.
 
 #### Section References
 
-A typed section reference is one deterministic CBOR data item embedded directly at the reference's
-position. It is not wrapped in `Sized<T>` and therefore has no preceding Janex byte-size field. The
-logical type parameter `T` determines the required `section_type` and has no binary representation, so
-it is omitted from the CDDL rule:
+A typed section reference is a bare CBOR item. Its logical type determines the required `section_type`
+but has no binary representation:
 
 ```cddl
 SectionRef =
@@ -430,72 +311,44 @@ SectionRef =
 SectionReferenceKindObject = uint / NonemptyText
 ```
 
-The `uint` form is a local reference and must resolve to the unique section identified by `(T, id)` in
-the same `JanexFile`; `id` must fit in `u64`. All currently defined section references use this form.
-In particular, IDs from `0` through `23` occupy one byte.
+The `uint` form resolves `(T, id)` in the same file; `id` must fit in `u64`. All core references use
+this form.
 
-The two-element array reserves an explicitly framed form for future reference mechanisms. Numeric
-reference kinds are assigned by this specification. A text reference kind must be non-empty and
-follow the text-key naming rules in
-[Metadata Evolution and Extensions](#metadata-evolution-and-extensions). The `payload` byte string
-must contain exactly one complete deterministic CBOR data item and no trailing bytes. Its byte-string
-length lets a reader skip an unsupported payload without recursively scanning it. A reader that must
-resolve a reference must reject an unsupported reference kind. No core extended reference kinds are
-currently defined. Writers that do not use an extension-defined reference kind must use the `uint`
-form.
-
-An untyped reference, if introduced by a future schema, must additionally identify its target section
-type.
+The array form is reserved for extended reference mechanisms. Its kind is a specification-assigned
+integer or an extension name. `payload` contains exactly one deterministic CBOR item. Unsupported
+kinds cannot be resolved. No core extended kinds are defined.
 
 Currently supported section types:
 
 ```rust
 #[repr(u64)]
 enum SectionType {
-    /// Represents arbitrary data in a Janex file. Janex tools will not use these sections.
-    ///
-    /// Padding sections do not require a `magic_number`.
+    /// Arbitrary padding bytes; no section magic number is required.
     Padding = 0x0047_4e49_4444_4150, // "PADDING\0"
 
-    /// The `FileMetadata` section. Used to store file metadata.
-    /// 
-    /// This section is always the last section in `sections`.
-    /// 
-    /// It is not recorded in `FileMetadataObject.section_table`, because that table is inside this
-    /// section and recording the section there would create a self-reference.
-    /// This section verifies itself using the internal `verification_info` information.
+    /// The final section. It is omitted from its own section table.
     FileMetadata = 0x4154_4144_4154_454d, // "METADATA"
 
-    /// The `Attributes` section.
     Attributes = 0x2e53_4249_5254_5441, // "ATTRIBS."
     
-    /// Stores indexed blobs, including structural metadata and file contents.
     BlobPool = 0x4c4f_4f50_424f_4c42, // "BLOBPOOL"
     
-    /// The `RootConfigGroup` section.
     RootConfigGroup = 0x5055_4f52_4747_4643, // "CFGGROUP"
 
-    /// The `ResourceGroups` section. Contains all embedded resource groups.
     ResourceGroups = 0x0053_5052_4753_4552, // "RESGRPS\0"
 
-    /// The `StringPool` section. A shared string pool used by the class file transform
-    /// and `RefBody` resource paths.
     StringPool = 0x004c_4f4f_5052_5453, // "STRPOOL\0"
 }
 ```
 
-All entries in `FileMetadataObject.section_table` describe sections arranged consecutively within
-`JanexFile.sections`. If additional data or padding needs to be inserted between them, the `Padding`
-section can be used.
+The table describes consecutive sections. Use `Padding` for bytes between them.
 
 Unknown sections may be skipped. A feature that requires an unknown section type must be declared in
 `FileMetadataObject.required_features`, causing readers that do not support it to reject the file.
 
 #### `ExternalRegionObject`
 
-`ExternalRegionObject` states whether bytes outside the `JanexFile` structure are described and
-constrained by Janex metadata. External regions do not have Janex section magic numbers and are not
-addressed by `SectionInfoObject`.
+`ExternalRegionObject` optionally constrains bytes outside `JanexFile`:
 
 ```cddl
 ExternalRegionObject =
@@ -503,17 +356,10 @@ ExternalRegionObject =
   / [described: 1, size: uint, checksum: ChecksumObject]
 ```
 
-The array tag is part of an explicit two-variant enum. `NotDescribed` contains exactly one element.
-`Described` contains exactly three elements. Other tags or array lengths are invalid.
-
-`NotDescribed` means that Janex metadata does not describe or constrain the corresponding external
-region. The physical region may be absent or may contain arbitrary bytes, and tools may modify it
-without rewriting the Janex metadata. `Described` requires the physical region to have exactly the
-specified `size`. Consequently, `[1, 0, [0, h'']]` (where checksum algorithm `0` is `NONE`)
-explicitly requires that the physical region be absent; it is not equivalent to `[0]`. When `size` is
-zero, the checksum must use the `NONE` algorithm. When `size` is nonzero, the checksum must not use
-the `NONE` algorithm and a reader must verify it.
-Metadata associated with the containing format may be stored in `FileMetadataObject.extensions`.
+`NotDescribed` imposes no restriction: the region may be absent or contain arbitrary bytes.
+`Described` requires the declared size and checksum. A zero size requires `NONE` and explicitly
+requires absence; a nonzero size requires a non-`NONE` checksum. Readers must compare the actual size
+and verify the non-`NONE` checksum.
 
 For a physical file of `physical_file_size` bytes, a reader receives `external_tail_length` from its
 caller and calculates:
@@ -523,33 +369,25 @@ janex_end   = physical_file_size - external_tail_length
 janex_start = janex_end - file_length
 ```
 
-Both subtractions must use checked arithmetic. The reader locates the fixed footer immediately before
-`janex_end`. The actual external header is the byte range before `janex_start`, and the actual external
-tail is the byte range from `janex_end` to `physical_file_size`. After decoding `FileMetadata`, the
-reader must compare an external region's actual size with its declared `size` and verify its checksum
-only when the corresponding `ExternalRegionObject` is `Described`. When it is `NotDescribed`, the reader
-imposes no metadata-derived size or checksum requirement on that region.
+The caller supplies `external_tail_length`; standalone Janex uses zero. Both subtractions use checked
+arithmetic. The external header precedes `janex_start`, and the external tail starts at `janex_end`.
+Janex does not infer the tail length by scanning the file.
 
-The reader must reject the file unless `end_mark` has its required value, `metadata_length` equals the
-exact encoded length of `FileMetadataSection`, and the following equation holds using checked
-arithmetic:
+The 24-byte footer immediately before `janex_end` locates `FileMetadataSection` through
+`metadata_length` and the container start through `file_length`.
+
+`end_mark` must match, `metadata_length` must equal the encoded `FileMetadataSection` length, and:
 
 ```text
 file_length = 8 + sum(FileMetadataObject.section_table[*].length) + metadata_length
 ```
 
-These requirements ensure that the located `JanexFile`, its consecutively stored sections, and its
-final metadata section have one consistent set of boundaries.
-
-The standalone Janex layout uses `external_tail_length = 0`. A containing format may define how its
-caller obtains a nonzero value. For example, a JAR-formatted launcher appended as an external tail may
-determine the length of its own JAR region before locating the preceding `JanexFile`. Janex itself does
-not scan external bytes for `end_mark` and does not infer the tail length from its contents.
+The equation must be evaluated with checked arithmetic.
 
 #### `VerificationInfo` Structure
 
-`VerificationInfo` is a tagged payload. Its `verification_type` is part of the authenticated input;
-the payload containing the resulting checksum or signature is not.
+`VerificationInfo` is a tagged payload. `verification_type` is included in `verification_input`; its
+payload is not.
 
 ```rust
 #[repr(TaggedPayload<u8>)]
@@ -605,47 +443,20 @@ enum VerificationInfo {
 file_bytes[file_metadata_start .. verification_type_end]
 ```
 
-`file_metadata_start` is the offset of the first byte of `FileMetadataSection.magic_number`, and
-`verification_type_end` is the offset immediately after the `verification_type` tag byte. This range
-is therefore the exact, contiguous on-disk representation from the start of `FileMetadataSection`
-through and including `verification_type`. These original bytes must be used directly without parsing,
-normalizing, or re-encoding them. Consequently, changing the verification type invalidates an existing
-checksum or signature instead of allowing the same verification payload to be interpreted under
-another type.
+The range starts at `FileMetadataSection.magic_number` and ends immediately after
+`verification_type`. Verification uses these original bytes without re-encoding them.
 
-For every known variant, the decoded payload must consume exactly `payload_bytes`; trailing or
-unconsumed bytes are invalid. An empty OpenPGP or CMS payload is invalid. A reader must reject an
-unknown `verification_type`, because it cannot determine whether or how the metadata was verified.
+The payload must consume exactly `payload_bytes`. OpenPGP and CMS payloads must be nonempty. Unknown
+verification types are invalid.
 
 ##### Verification Policy
 
-`None` and `Checksum` do not authenticate the file against an active attacker. A reader must report
-them as unauthenticated and must reject them whenever its caller requires authenticated input.
-Preventing removal of an entire signature requires such an external verification policy: a file
-whose signature was replaced with `None` is indistinguishable from a file originally written with
-`None` until the caller requires a particular authenticated verification type and trusted signer.
-OpenPGP and CMS verification must therefore use caller-provided trust and algorithm policies; a
-cryptographically valid signature from an untrusted signer is not sufficient.
+`None` and `Checksum` provide no authentication and must be rejected when authentication is required.
+OpenPGP and CMS use caller-provided signer, trust, algorithm, time, and revocation policies. A malformed
+or invalid signature is invalid under its declared type; readers must not fall back to another type.
 
-An OpenPGP- or CMS-tagged file with a malformed or cryptographically invalid signature is invalid. A
-reader must not retry it as another verification type, treat it as `None` or `Checksum`, or continue
-using content obtained from it. An implementation that only inspects the file without authenticating
-it must explicitly report that no authentication was performed and must not expose the result as
-authenticated.
-
-The caller's verification policy must define at least:
-
-- whether authenticated input is required;
-- which verification types, signature algorithms, digest algorithms, keys, and certificates are
-  accepted;
-- which signer or signers must succeed when a signature container identifies more than one signer;
-- the validation time and any required expiration or revocation checks.
-
-Algorithm support does not imply algorithm acceptance. An implementation may decode an algorithm that
-the caller's current policy rejects. Implementations supporting OpenPGP or CMS verification must
-support SHA-256 as a content-digest algorithm for that signature format. Writers must not create, and
-readers must not accept, Janex signatures that depend on MD5, SHA-1, or RIPEMD-160. Other algorithms
-are accepted only when permitted by the caller's policy.
+OpenPGP and CMS implementations must support SHA-256 for content digests. Janex signatures must not
+use MD5, SHA-1, or RIPEMD-160. Other algorithms are subject to caller policy.
 
 ##### OpenPGP Profile
 
@@ -662,9 +473,8 @@ representation. The Signature packet must:
   verifies the signature; and
 - satisfy the caller's algorithm, key-strength, key-usage, expiration, and revocation policies.
 
-Issuer information in the unhashed subpacket area is advisory and must not establish signer identity
-or trust. A reader must reject an unsupported critical subpacket. The signing key and its trust data
-are supplied by the caller or an external key store; they are not carried by `VerificationInfo`.
+Unhashed issuer information is advisory. Unsupported critical subpackets are invalid. Keys and trust
+data come from the caller or an external key store.
 
 ##### CMS Profile
 
@@ -685,45 +495,18 @@ The CMS payload uses the syntax defined by
 - the same digest algorithm is used for the content digest and the signed attributes, as required by
   RFC 8933.
 
-For each signer required by policy, the reader must independently recompute the digest of
-`verification_input`, validate the signed attributes and signature, identify the signing certificate
-or externally supplied key, and apply the caller's trust, key-usage, validity, and revocation rules.
-Certificates or revocation information embedded in `SignedData` are inputs to that process and are
-not trusted merely because they are embedded. Unsigned attributes must not affect acceptance of the
-primary signature. If multiple `SignerInfo` values are present, the caller's policy determines whether
-one, a specified subset, or all of them must succeed.
+Each required signer must pass digest, signature, identity, and caller-policy validation. Embedded
+certificates and revocation data are not trusted merely because they are embedded. Unsigned attributes
+do not affect the primary signature. Caller policy selects the required signers.
 
 ##### Authenticated Content Scope
 
-To authenticate every Janex section and both external data regions, each entry in
-`FileMetadataObject.section_table` must use a cryptographically secure checksum, both external regions
-must be `Described`, and each described non-empty external region must use a cryptographically secure
-checksum. The signed
-`verification_input` then binds those checksums and any explicit zero-size requirements to the file
-metadata. `SHA256`, `SHA512`, and `SM3` are cryptographically secure checksum algorithms for this
-purpose; `NONE` and `XXH64` are not. A reader claiming this scope of authentication must verify every
-required checksum before trusting the corresponding bytes. An external region marked
-`NotDescribed` is outside the integrity guarantees provided by Janex metadata.
+Full-container authentication requires a secure checksum for every section and every nonempty external
+region, with both external regions `Described`. Readers must verify all of them. `SHA256`, `SHA512`, and
+`SM3` qualify; `NONE` and `XXH64` do not. `NotDescribed` regions are outside this scope.
 
-The verification payload itself is not part of `verification_input`, and the footer is enforced by
-the structural boundary checks rather than by the detached signature. Authentication therefore binds
-the file's metadata and all content represented by authenticated checksums; it is not a canonical
-byte-for-byte signature of the complete physical representation.
-
-Readers must verify a byte source that remains stable for the duration of verification and use. If an
-attacker may modify the source concurrently, the reader must use an immutable snapshot or another
-mechanism that prevents verified bytes from being replaced before they are consumed.
-
-##### Rollback and Replacement
-
-A valid signature proves integrity and signer authorization under the caller's policy; it does not
-prove that the file is the newest authorized release. An attacker may replace a Janex file with an
-older file or a different file signed by the same trusted signer. Applications requiring rollback or
-object-substitution protection must compare an expected file identity, release identifier, monotonic
-version, or digest obtained from trusted state outside the file. `major_version` and `minor_version`
-identify the Janex format revision and must not be used as application release counters. OpenPGP
-Signature Creation Time and CMS signing-time attributes are signer assertions and do not by themselves
-provide trusted freshness.
+The signature binds metadata and the checksums recorded in it. It does not directly sign the
+verification payload, footer, or complete physical file representation.
 
 ### `Attributes` Section
 
@@ -739,11 +522,8 @@ struct AttributesSection {
 }
 ```
 
-`attributes` is a bare `CborMap` occupying the remainder of the section.
-
-Each Janex file may contain at most one `Attributes` section, whose section ID must be `0`.
-Attributes are descriptive metadata unless another part of this specification explicitly assigns a
-particular attribute operational semantics.
+`attributes` occupies the remainder of the section. A file may contain at most one `Attributes`
+section, with ID `0`. Attributes are descriptive unless their definitions assign operational semantics.
 
 The CBOR object is a text-keyed map:
 
@@ -751,14 +531,8 @@ The CBOR object is a text-keyed map:
 AttributesObject = { * NonemptyText => any }
 ```
 
-Attribute names follow the text-key naming rules in
-[Metadata Evolution and Extensions](#metadata-evolution-and-extensions). Each value is interpreted
-according to its attribute name. Readers that do not recognize an attribute must ignore it and may
-preserve its encoded value when rewriting the file.
-
-Writers should omit the section when it would contain no attributes. Readers must nevertheless accept
-an empty map. The top-level value must not be `null` or an array. An individual attribute value may be
-`null` only when that attribute's schema explicitly assigns meaning to `null`.
+Attribute names follow the extension naming rules. Unknown attributes may be ignored. Writers should
+omit an empty section, but readers must accept its empty map.
 
 ### `RootConfigGroup` Section
 
@@ -776,7 +550,7 @@ struct RootConfigGroupSection {
 }
 ```
 
-`root_group` is a bare `CborMap` occupying the remainder of the section.
+`root_group` occupies the remainder of the section.
 
 #### `ConfigGroupObject` Map
 
@@ -795,10 +569,8 @@ ConfigGroupObject = {
 }
 ```
 
-An empty `ConfigGroupObject` is valid. A missing `condition` means that the group is unconditional;
-`condition` must not be `null`. When present, it is a CEL expression that must evaluate to `bool` or
-`int` as described in [Conditions](#conditions). The root condition may be used to determine whether a
-runtime and platform are suitable. Subgroup conditions select environment-specific configuration.
+An omitted `condition` is unconditional. Otherwise, it is a CEL expression described in
+[Conditions](#conditions).
 
 The launcher visits the root and its `subgroups` in depth-first pre-order. Each subgroup is evaluated
 independently. For a group whose condition matches, the configuration keys are applied as follows:
@@ -809,13 +581,11 @@ independently. For a group whose condition matches, the configuration keys are a
   order, while `null` clears all elements accumulated for that key; and
 - an empty array is valid and appends nothing.
 
-`subgroups` preserves array order and must not be `null`. `extensions`, when present, follows the
-text-key naming rules in [Metadata Evolution and Extensions](#metadata-evolution-and-extensions). An
-empty extension map is valid, although writers should omit it.
+`subgroups` preserves array order and must not be `null`.
 
 #### `ResourceGroupReferenceObject`
 
-A resource-group reference is one of the following exact-length CBOR arrays:
+A resource-group reference is one of these CBOR arrays:
 
 ```cddl
 ResourceGroupReferenceObject =
@@ -823,18 +593,11 @@ ResourceGroupReferenceObject =
   / [remote: 1, purl: tstr, checksum: ChecksumObject]
 ```
 
-Variant `0` refers to an embedded resource group. `resource_groups` must resolve to a
-`ResourceGroups` section, and `group_name` must match exactly one group in that section.
+Variant `0` selects one named group from the referenced `ResourceGroups` section.
 
-Variant `1` refers to a package that the launcher resolves and downloads without resolving transitive
-dependencies. `purl` must be a canonical Package URL identifying one concrete package version and must
-not use a `vers` qualifier. Maven artifacts should use `pkg:maven`; a non-default Maven repository is
-specified with the `repository_url` qualifier. The checksum verifies the downloaded package and is
-part of the Janex trust policy rather than a PURL `checksum` qualifier. Examples include:
-
-- `pkg:maven/org.slf4j/slf4j-api@2.0.9`
-- `pkg:maven/org.apache.xmlgraphics/batik-anim@1.9.1?type=pom`
-- `pkg:maven/net.sf.jacob-projec/jacob@1.14.3?classifier=x64&type=dll`
+Variant `1` identifies one concrete package version by canonical Package URL. The launcher downloads
+it without resolving transitive dependencies and verifies `checksum`. A `vers` qualifier is not
+allowed. Maven artifacts use `pkg:maven`; `repository_url` selects a non-default repository.
 
 #### `JavaAgentObject`
 
@@ -842,15 +605,14 @@ part of the Janex trust policy rather than a PURL `checksum` qualifier. Examples
 JavaAgentObject = [reference: ResourceGroupReferenceObject, option: tstr]
 ```
 
-The array must contain exactly two elements. An empty `option` means that no agent option is supplied.
+An empty `option` means that no agent option is supplied.
 
 ### `ResourceGroups` Section
 
-`ResourceGroups` contains embedded resource groups. A Janex file may contain any number of
-`ResourceGroups` sections. Each is identified by the ID of its corresponding `SectionInfoObject`.
+`ResourceGroups` contains named embedded resource groups. A file may contain any number of these
+sections.
 
-When key `4` (`metadata`) is present in the corresponding `SectionInfoObject`, it must be the following
-deterministic CBOR map:
+Its section metadata, when present, has this schema:
 
 ```cddl
 ResourceGroupsMetadataObject = {
@@ -860,15 +622,8 @@ ResourceGroupsMetadataObject = {
 }
 ```
 
-`string_pool` selects the string pool used by every `ClassFile` transform and `RefBody` path contained
-in this `ResourceGroups` section. It is required if any such value occurs and may refer to a string
-pool shared with other resource-group sections. `extensions`, when present, follows the text-key
-naming rules in [Metadata Evolution and Extensions](#metadata-evolution-and-extensions). Empty maps
-are valid, although writers should omit an empty `extensions` map and omit section metadata entirely
-when it would be empty.
-
-Each resource group is a logical container of related files, typically corresponding to a single JAR
-or module from the original Java project. Group names must be unique within the section.
+`string_pool` selects the pool used by all `ClassFile` transforms and `RefBody` paths in the section.
+It is required when either occurs. Group names must be unique within the section.
 
 ```rust
 struct ResourceGroupsSection {
@@ -884,8 +639,7 @@ struct ResourceGroupsSection {
 
 #### `ResourceGroup`
 
-A `ResourceGroup` represents a logical container of related files, typically corresponding to a single
-JAR or module from the original Java project.
+A `ResourceGroup` is a named collection of resources, typically corresponding to a JAR or module.
 
 ```rust
 struct ResourceGroup {
@@ -905,9 +659,7 @@ struct ResourceGroup {
     /// The number of `Resource` entries stored in this group.
     resources_count: vuint,
 
-    /// The array of resource metadata entries for this group.
-    ///
-    /// Writers normally place this structural data in a blob pool separate from file contents.
+    /// The resources in this group.
     resources: Content<[Resource; resources_count]>
 }
 ```
@@ -918,19 +670,13 @@ The resource-group metadata is a text-keyed map:
 ResourceGroupMetadataObject = { * NonemptyText => any }
 ```
 
-Metadata names follow the text-key naming rules in
-[Metadata Evolution and Extensions](#metadata-evolution-and-extensions). Unknown entries have no
-effect on resource decoding and may be ignored. The empty map is valid and is the canonical
-representation of no group metadata; unlike an optional map field in a surrounding CBOR object, this
-object is required by the binary `ResourceGroup` structure.
+Names follow the extension naming rules. The required map may be empty; unknown entries do not affect
+resource decoding.
 
 #### `Resource`
 
 A `Resource` represents a single entry (regular file, directory, or symbolic link) within a resource
 group.
-
-Resource entries normally contain only metadata. Small regular-file contents may be stored inline;
-other contents are stored in one or more blobs in `BlobPool` sections.
 
 ```rust
 enum Resource {
@@ -986,20 +732,11 @@ enum Resource {
 
 #### `ResourcePath`
 
-`ResourcePath` represents the path of a `Resource`, for example `java/lang/Object.class`.
+`ResourcePath` is a relative `/`-separated path. It must not be empty, start or end with `/`, or
+contain empty, `.` or `..` components. Resource entry paths must be unique within their group.
 
-`ResourcePath` is composed of several parts separated by `/`. The `/` cannot be the first or last character, and cannot be empty.
-Each part of `ResourcePath` cannot be empty, cannot be `.` or `..`, and cannot contain `/`.
-
-In each `ResourceGroup`, `ResourcePath` must be unique.
-
-`ResourcePath` using one of two encodings selected by the value of `length`:
-
-- **`StringBody`** (when `length != 0`): the full path string is stored inline, with `length` giving
-  its byte length.
-- **`RefBody`** (when `length == 0`): the path is described by two integer indices into the shared
-  `StringPool` — one for the directory component and one for the file name component. This encoding
-  avoids repeating path strings that appear across many resources.
+A nonzero `length` stores the UTF-8 path inline. Zero selects `RefBody`, whose two indices identify the
+directory and file name in the section's `StringPool`.
 
 ```rust
 struct ResourcePath {
@@ -1051,32 +788,19 @@ UnixNanosecondsObject =
   / #6.3(bstr .size (9..16))
 ```
 
-The empty map is the canonical representation of a resource with no metadata. The top-level value and
-all currently defined values must not be `null`. `extensions`, when present, follows the text-key
-naming rules in [Metadata Evolution and Extensions](#metadata-evolution-and-extensions); writers
-should omit it when empty. Unknown numeric keys are optional unless guarded by a required feature.
+An empty map represents no metadata.
 
-`checksum` is valid only for a regular file and verifies the logical file content after reversing its
-content transforms. `comment` is UTF-8 text. `posix_permissions` contains the POSIX file permission
-bits as an unsigned integer and must fit in `u16`.
+`checksum` is valid only for regular files and covers the logical content after transforms are
+reversed. `posix_permissions` contains the POSIX permission bits.
 
-Each time value is a signed count of nanoseconds elapsed since `1970-01-01T00:00:00Z` on the POSIX
-time scale, which does not represent leap seconds. For example, `-1` represents
-`1969-12-31T23:59:59.999999999Z`. Its logical range is the complete signed `i128` range
-`[-2^127, 2^127 - 1]`.
-
-A value in the basic CBOR integer range `[-2^64, 2^64 - 1]` must use CBOR major type `0` or `1` with
-preferred serialization. A larger nonnegative value uses tag `2`; a value less than `-2^64` uses tag
-`3`, whose encoded unsigned magnitude is `-1 - value`. In either tagged form, the tag contains a
-big-endian byte string of 9 through 16 bytes with no leading zero byte. Tags `2` and `3` are permitted
-only for `UnixNanosecondsObject` values that cannot use a basic CBOR integer. Other tags, floating-point
-timestamps, and textual timestamps are invalid.
+Time values are signed `i128` POSIX timestamps in nanoseconds. Values in CBOR's basic integer range use
+major type `0` or `1`. Larger values use tag `2` or `3` with a minimal 9-to-16-byte big-endian
+magnitude; tag `3` encodes `-1 - value`.
 
 ### Content
 
-`Content<T>` stores the logical encoded representation of a value, optionally transformed and backed
-by inline bytes, one complete blob, or one or more blob ranges. The type parameter `T` describes the
-logical value reconstructed after reversing all transforms and has no separate binary representation:
+`Content<T>` stores an encoded value inline, in one blob, or across blob slices. `T` is the logical
+type obtained after reversing its transforms and has no binary representation of its own:
 
 ```rust
 struct Content<T> {
@@ -1088,7 +812,7 @@ struct Content<T> {
 }
 ```
 
-`ContentSource` describes how to obtain the transformed byte sequence:
+`ContentSource` locates the transformed bytes:
 
 ```rust
 #[repr(u8)]
@@ -1113,16 +837,9 @@ enum ContentSource {
 }
 ```
 
-For `Inline`, the source sequence is `bytes`; an empty source sequence is encoded by an empty `bytes`
-vector. For `Blob`, the source sequence is the complete decoded blob. For `BlobSlices`, the source
-sequence is the concatenation of the selected decoded ranges in array order. Readers must use checked
-arithmetic when calculating the total concatenated size and must reject an unsupported `source_type`.
-
-`BlobSlices.slices` must contain at least one element. A `BlobSlices` value containing exactly one
-slice that covers its complete decoded blob is not permitted; it must use the `Blob` variant instead.
-Zero-length slices are not permitted; therefore, an empty source sequence has the single canonical
-representation `Inline` with an empty byte vector. The size threshold at which a writer chooses
-`Inline` instead of pooled storage is a writer policy and is not part of the format semantics.
+`Inline` supplies `bytes`, `Blob` supplies one complete decoded blob, and `BlobSlices` concatenates
+decoded ranges in array order. `BlobSlices` must be nonempty and must not represent one complete blob;
+use `Blob` for that case. Slices are nonempty, so empty content uses an empty `Inline` value.
 
 Content transforms are described by the following structures:
 
@@ -1152,34 +869,18 @@ ClassFileTransformPropertiesObject = {}
 
 The schema of `properties.value` is selected by `method`.
 
-As with blob filters, transforms are stored in encoding order and reversed by readers. The byte
-sequence obtained from `source` is passed through the transforms from last to first. Reversing each
-transform must produce exactly its `input_size` bytes. After all transforms have been reversed, the
-result must be a valid encoding of `T`. An empty transform array means that `source` already contains
-the encoded representation of `T`. Otherwise, the logical encoded size is the `input_size` of the
-first transform.
+Transforms are stored in encoding order and reversed from last to first after blob decoding and slice
+concatenation. Each result must match `input_size`; the final value must be a valid encoding of `T`.
+An empty transform array means the source already encodes `T`. Unsupported methods are invalid.
 
-Content transforms operate after blob decoding and slice concatenation. They are properties of a
-logical `Content<T>` value, not of a physical blob. Each transform method defines the logical types to
-which it may be applied. A reader must reject a transform that is unsupported or incompatible with
-`T`.
-
-The only currently defined transform, `CLASSFILE`, is valid only for `Content<[u8]>` belonging to a
-regular-file resource. Consequently, the transform arrays of `ResourceGroup.resources` and
-`StringPoolSection.data` must currently be empty. Future transform methods may define support for
-other logical types. A solid-compressed blob may contain source ranges belonging to values with
-different transform chains.
+`CLASSFILE` is valid only for regular-file `Content<[u8]>`. The transform arrays of
+`ResourceGroup.resources` and `StringPoolSection.data` must therefore be empty.
 
 #### Class File Transform
 
-Janex typically extracts frequently occurring strings (such as common package names, type descriptors,
-and method signatures) from class file constant pools into a shared `StringPool`. Writers store the
-transformed class representations as file-content sources and may pack them with other sources into
-blobs before applying Zstandard at the blob layer. This approach allows strings that appear across
-many class files to be stored only once while retaining solid-compression support.
+The class-file transform moves selected constant-pool strings into a shared `StringPool`.
 
-The `ClassFile` content transform largely preserves the standard class file format, but introduces
-the following modifications:
+It modifies the class file as follows:
 
 1. The magic number of the transformed class file is rewritten to `0x70CAFECA`
    (`0xCA 0xFE 0xCA 0x70` in file order) to distinguish it from an unmodified class file.
@@ -1213,19 +914,13 @@ the following modifications:
         }
         ```
 
-The input to the `ClassFile` transform must be a valid Java class file. The containing
-`ResourceGroups` section must select a `StringPool` through its `ResourceGroupsMetadataObject`, and
-reversing the transform uses that string pool. The `properties.value` map of `CLASSFILE` must be
-empty.
+The input must be a valid Java class file. Reversal uses the `StringPool` selected by the containing
+`ResourceGroups` section. `CLASSFILE` properties must be empty.
 
 ### `StringPool` Section
 
-A shared string pool used by the class file transform and `RefBody` resource paths.
-
-A Janex file may contain any number of `StringPool` sections. Each is identified by the ID of its
-corresponding `SectionInfoObject`. A `ResourceGroups` section explicitly selects its string pool
-through `ResourceGroupsMetadataObject.string_pool`; multiple resource-group sections may select the
-same string pool.
+A `StringPool` supplies strings for class-file transforms and `RefBody` paths. A file may contain any
+number of pools, and multiple `ResourceGroups` sections may share one.
 
 ```rust
 struct StringPoolSection {
@@ -1246,22 +941,13 @@ struct StringPoolData {
 }
 ```
 
-All strings stored in the `StringPool` are encoded in standard UTF-8. When used to reverse a
-`ClassFile` content transform, they need to be converted back to Modified UTF-8 encoding. The
-`transforms` array of `StringPoolSection.data` must be empty because the string pool is bootstrap data
-required by `ClassFile`; its `source` may use any valid `ContentSource` variant.
+Strings use UTF-8 and are converted to Modified UTF-8 when restoring a class file.
+`StringPoolSection.data.transforms` must be empty; its source may use any `ContentSource` variant.
 
 ### `BlobPool` Section
 
-A `BlobPool` stores independently decoded byte blobs. Stored blobs may contain resource metadata
-arrays, string-pool data, file contents, or extension-defined data. Logical types and transforms are
-assigned by `Content<T>` values and are not part of the blob-pool layout.
-
-A Janex file may contain any number of `BlobPool` sections, including none when the file contains no
-`BlobRef`. Each blob pool is identified by the `id` of its corresponding `SectionInfoObject`.
-Blob-pool IDs must be unique within the section type, as required for all section IDs, and carry no
-semantic meaning. Readers must not assume that a particular ID, physical position, or creation order
-identifies a particular kind of data.
+A `BlobPool` stores independently decoded byte blobs. Their logical types and transforms belong to
+`Content<T>`, not the pool. A file may contain any number of pools.
 
 ```rust
 struct BlobPoolSection {
@@ -1274,7 +960,7 @@ struct BlobPoolSection {
 
 #### Blob Encoding
 
-`BlobEncoding` describes the stored representation of a blob and the filters applied to produce it:
+`BlobEncoding` describes a stored blob and its filters:
 
 ```rust
 struct BlobEncoding {
@@ -1297,15 +983,8 @@ struct BlobFilter {
 }
 ```
 
-A reader reverses the filters in array order: it processes the last filter first and the first filter
-last. Reversing a filter must produce exactly `input_size` bytes. An empty filter array means that the
-blob is stored without transformation, in which case its decoded size equals `stored_size`. Otherwise,
-the decoded size of the blob is the `input_size` of the first filter.
-
-The stored size and every filter input size are independently authoritative. Readers must enforce
-implementation resource limits before allocating output buffers and must reject a filter that produces
-a different number of bytes. Filter properties contain only information required by a decoder; writer
-settings such as a compression level are not part of the format.
+Readers reverse filters from last to first. Each result must match `input_size`. With no filters, the
+decoded size is `stored_size`; otherwise, it is the first filter's `input_size`.
 
 The supported blob filters are:
 
@@ -1319,15 +998,12 @@ enum BlobFilterId {
 }
 ```
 
-A reader must reject a blob that uses an unsupported filter.
-
-The `properties.value` map of `ZSTD` must be empty.
+Unsupported filters are invalid. `ZSTD` properties must be empty.
 
 #### Blob Table
 
-The length of `bytes` is `SectionInfoObject.length - 8`; therefore, a `BlobPool` section must have a
-length of at least 8 bytes. Key `4` (`metadata`) of the corresponding `SectionInfoObject` is required
-and must be the following deterministic CBOR map:
+`bytes` has length `SectionInfoObject.length - 8`, so the section is at least eight bytes long. The
+corresponding section metadata is required and has this schema:
 
 ```cddl
 BlobPoolMetadataObject = {
@@ -1343,16 +1019,8 @@ BlobFilterObject = [input_size: uint, method: 0..255, properties: BlobFilterProp
 BlobFilterPropertiesObject = { * uint => any }
 ```
 
-Keys `0` through `2` are required. `table_offset`, `stored_size`, and each `input_size` must fit in
-`u64`; `method` must fit in `u8`. `BlobEncodingObject` must contain exactly two elements, and each
-`BlobFilterObject` must contain exactly three. For `ZSTD`, `properties` must be empty. The `filters`
-array may be empty, uses encoding order, and has the same decoding and size semantics as binary
-`BlobEncoding`. `extensions`, when present,
-follows the text-key naming rules in
-[Metadata Evolution and Extensions](#metadata-evolution-and-extensions). An empty extension map is
-valid, although writers should omit it. A reader must reject a blob pool whose table encoding uses an
-unsupported filter. The section metadata uses `BlobEncodingObject` to locate and decode the bootstrap
-blob table. Each `BlobInfo` uses the binary `BlobEncoding` structure defined above.
+The integer sizes and offsets must fit in `u64`; filter methods must fit in `u8`. Table filters have the
+same order and size rules as `BlobEncoding`. Unsupported filters are invalid.
 
 ```rust
 struct BlobTable {
@@ -1373,25 +1041,17 @@ struct BlobInfo {
 }
 ```
 
-The stored blob table occupies the half-open range
-`[BlobPoolMetadataObject.table_offset, BlobPoolMetadataObject.table_offset +
-BlobPoolMetadataObject.table_encoding.stored_size)`. Reversing its filter chain must produce a valid
-`BlobTable` and, unless the checksum algorithm is `NONE`, the decoded representation must match
-`BlobPoolMetadataObject.table_checksum`. Blob-table filters must be self-contained and must not depend
-on `Content<T>`, a `BlobRef`, or other external data because the table is bootstrap metadata.
+The stored blob table starts at `table_offset` and has the declared stored size. Decoding it must
+produce a valid `BlobTable` and satisfy `table_checksum` unless the algorithm is `NONE`. Its filters
+must be self-contained.
 
-Each stored blob occupies the half-open range
-`[BlobInfo.offset, BlobInfo.offset + BlobInfo.encoding.stored_size)`. Readers must reverse its filters
-as specified by `BlobEncoding` and must validate all stored and decoded ranges using checked
-arithmetic. Stored blob ranges must be within `BlobPoolSection.bytes` and must not overlap one another
-or the stored blob table. The stored blob-table range must also be within `BlobPoolSection.bytes`. A
-writer may place the table anywhere in the section; placing it after the blob representations permits
-forward-only construction of the section payload.
+Each blob starts at `BlobInfo.offset` and has its declared stored size. The table and blobs must fit in
+`BlobPoolSection.bytes`; their stored ranges must not overlap. Writers may place the table anywhere in
+the section.
 
 #### Blob References
 
-`BlobRef` identifies one complete blob in a `BlobPool` section. A blob is an independently decoded
-physical storage unit; `BlobRef` assigns no logical type or transform to its decoded bytes:
+`BlobRef` identifies one complete, independently decoded blob:
 
 ```rust
 struct BlobRef {
@@ -1403,11 +1063,8 @@ struct BlobRef {
 }
 ```
 
-The `blob_pool` reference must resolve to exactly one `BlobPool` section. The selected `BlobInfo`
-supplies the location and encoding metadata of the stored representation. The `blob_index` must be
-less than the number of entries in the selected `BlobTable`. Decoding produces an uninterpreted byte
-sequence; a containing `Content<T>` or extension-defined structure assigns its logical meaning.
-`BlobSlice` may additionally select a byte range. Multiple references may identify the same blob.
+`blob_index` must select an existing entry in the referenced pool's `BlobTable`. Decoding produces
+uninterpreted bytes; the containing structure assigns their meaning.
 
 `BlobSlice` identifies a non-empty range in the decoded representation of one blob:
 
@@ -1424,51 +1081,28 @@ struct BlobSlice {
 }
 ```
 
-The half-open range `[decoded_offset, decoded_offset + decoded_length)` must be contained in the
-decoded blob. Readers must validate the range using checked arithmetic before copying or exposing it.
+The selected range must be nonempty and contained in the decoded blob. Blob indices are local to one
+pool.
 
-Each `BlobRef` is resolved independently and may reference any blob pool. A blob pool may contain both
-structural metadata and file contents, and references from different roots may share a blob. Blob
-indices are local to one blob pool and do not provide stable identity across files or revisions.
-
-Writers should normally use separate blob pools for structural data and file contents when both are
-substantial. In the typical layout, resource metadata arrays and string-pool data are placed in one
-structural blob pool, while file contents are placed in another. Writers may combine them into one pool
-for small files, and may use additional pools when this improves access locality, integrity isolation,
-incremental updates, or independent distribution. Writers should not create one blob pool per resource
-group without a concrete storage-policy reason.
-
-This separation is a writer layout policy only. Readers must support any valid distribution of blobs
-across blob pools. The ordinary sections located through `FileMetadata` must provide the initial
-`Content<T>` values needed to begin decoding pooled data. A decoded logical value may contain further
-`Content<T>` values or blob references, but the resulting content and blob dependency graph must be
-finite and acyclic; no value may directly or indirectly depend on itself.
+Blob distribution is writer policy; readers must support any valid distribution. Writers may separate
+structural data and file content for locality or incremental updates. Content dependencies must be
+finite and acyclic.
 
 ## Conditions
 
-Janex allows users to declare runtime environment requirements for a program, such as the minimum Java version,
-operating system, and CPU architecture.
-
-The Janex Launcher evaluates these conditions against each candidate Java installation
-and the current host platform to determine which installations are eligible and which has the highest priority.
-
-Conditions also govern which classpath entries, module path entries, JVM arguments, and other
-configuration values are applied at launch time, enabling a single Janex file to carry
-platform-specific or version-specific configuration.
-
-Users express these requirements using [Common Expression Language (CEL)](https://cel.dev/overview/cel-overview)
-when building a Janex file.
+Conditions are [Common Expression Language (CEL)](https://cel.dev/overview/cel-overview) expressions
+used to select Java runtimes and environment-specific configuration.
 
 A condition expression must evaluate to either `bool` or `int`:
 
-- If it evaluates to `bool`, the associated configuration is applied when the result is `true`.
+- A `bool` result matches when `true`.
 - If it evaluates to `int`:
-  - For a root group, the value represents a priority score. The launcher selects the Java installation with the highest score.
-  - For a subgroup, any value is equivalent to `true`.
+  - for a root group, the value is the runtime priority;
+  - for a subgroup, any value matches.
 
 ### Environment
 
-At runtime, the Janex Launcher makes the following variables available for use in condition expressions:
+The launcher exposes these variables:
 
 ```rust
 // Information about a candidate Java installation.
@@ -1478,7 +1112,7 @@ let java: Java = ...;
 let platform: Platform = ...;
 ```
 
-The `Java` struct provides information about a candidate Java runtime environment:
+A candidate Java runtime is described by:
 
 ```rust
 /// Information about a Java runtime environment.
@@ -1525,7 +1159,7 @@ struct JavaVersion {
 }
 ```
 
-The `Platform` struct provides information about the current host platform:
+The current platform is described by:
 
 ```rust
 /// Information about the current host platform.
